#131 fix HowItwork bg overflow

--- a/src/components/HowItWorks/HowItWorks.module.scss
+++ b/src/components/HowItWorks/HowItWorks.module.scss
@@ -2,6 +2,7 @@
   position: relative;
   padding-bottom: 10rem;
   margin-top: 6.5rem;
+  overflow: hidden;
   .bg {
     max-width: 130rem;
 
